# Voxelsworld

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: warnings.cmake
data/: grass_side.xcf  grass_top.xcf  voxelworld.ini  world_texture.tps
scripts/: gen_event_id.py
shaders/: blinn_phong.frag  blinn_phong.vert  gui_texture.frag  gui_texture.vert  line.frag  line.vert  water.frag  water.vert
src/: CMakeLists.txt  aabb.cpp  aabb.hpp  application.cpp  application.hpp  block.cpp  block.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  config.cpp  config.hpp  debug_draw.cpp  debug_draw.hpp  defer.hpp  event.cpp  event.hpp  event_manager.cpp  event_manager.hpp  gui.cpp  gui.hpp  gui_element.hpp  gui_texture.cpp  gui_texture.hpp  image.cpp  main.cpp  math.hpp  player.cpp  player.hpp  ray.cpp  ray.hpp  string.cpp  string.hpp  texture_atlas.cpp  texture_atlas.hpp  time.cpp  time.hpp  world.cpp  world.hpp
src/gl/: CMakeLists.txt  gl_framebuffer.cpp  gl_framebuffer.hpp  gl_index_buffer.cpp  gl_index_buffer.hpp  gl_renderbuffer.cpp  gl_renderbuffer.hpp  gl_shader.cpp  gl_shader.hpp  gl_texture.cpp  gl_texture.hpp  gl_texture_array.cpp  gl_texture_array.hpp  gl_vertex_buffer.cpp  gl_vertex_buffer.hpp
src/log/: CMakeLists.txt  log.cpp  log.hpp
src/util/: CMakeLists.txt  image.hpp
